# design-mcp

./: .gitattributes  .gitignore  DESIGN_DOC.md  README.md  RESEARCH_PROMPT.md  check_vision.py  claude_desktop_config.json  copy_batch.py  database.py  enrichment.py  pyproject.toml  rescan.py  rescan_both.py  schema.py  server.py  test_analyze.py  test_dashboard.html  test_mcp_on_lawyer.py  test_output.json  test_server.py  test_trackr_v3.html  test_with_data.py
data/: anti_generic_system.json  behavioral_templates.json  component_code.json  decision_trees.json  decision_trees_indexed.json  layout_templates.json  libraries.json  vision_results.json  visual_recipes.json
design_mcp/: __init__.py  cli.py  database.py  enrichment.py  schema.py  server.py
models/: analyzer.py  quality_scorer.py  train_scorer.py
prompts/: analyze_screen.md  compare_patterns.md  generate_blueprint.md
scraping/: awwwards_plan.md  dribbble_plan.md
screenshots/: README.md
scripts/: build_real_data.py  download_all_screenshots.py  download_and_extract.py  download_dribbble_batch.py  download_screenshots.py  dribbble_batch2.py  dribbble_urls.py  explore_dataset.py  fetch_dribbble_images.py  generate_seed_data.py  ingest_awwwards.py  ingest_dribbble.py  ingest_remaining.py  ingest_screenshots.py  ingest_webui7k.py  normalize_and_save.py  normalize_results.py  normalize_vision.py  optimize_data.py  optimize_v2.py  parse_batch1.py  parse_batch2.py  parse_batch3.py  parse_batch4.py  parse_batch5.py  parse_batch6.py  parse_batch7.py  parse_batch8.py  prepare_batch.py  rebuild_pipeline.py  (+13 more)
(+22 files in other folders)
