[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "design-mcp"
version = "0.1.0"
description = "MCP server giving AI agents structured access to 7,000+ real-world design patterns"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "Chris Micah"},
]
keywords = ["mcp", "design", "ai", "ui", "design-patterns", "accessibility"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "fastmcp>=2.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
]

[project.scripts]
design-mcp = "design_mcp.cli:main"

[project.urls]
Homepage = "https://github.com/chrismicah/design-mcp"
Repository = "https://github.com/chrismicah/design-mcp"

[tool.setuptools.packages.find]
include = ["design_mcp", "design_mcp.*"]

[tool.setuptools.package-data]
design_mcp = [
    "data/*.json",
    "data/tokens/*.json",
    "prompts/*.md",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
